add images to 53

--- a/content/8-posters/53.md
+++ b/content/8-posters/53.md
@@ -35,7 +35,9 @@ abstract: "The treatment of five large-scale paintings by Dutch artist Aart Scho
 
 ## Historical Background
 
-The Menagerie van Prince Willem V consists of five large-scale paintings by Dutch artist Aart Schouman (1710–1792) ([**fig. 53.1**](fig-53-1)). Prince Willem V van Oranje-Nassau (1748–1806) commissioned the series for his private chambers in the Stadhouderlijk Kwartier, The Hague. The continuous landscapes depict Prince Willlem’s private collection of exotic animals. Transferred to Palace Huis ten Bosch at an unknown date, they languished rolled up and folded in the attic until their rediscovery in 1975.[^1] In the same year the paintings were restored by Nico van Bohemen Sr. and team, and then installed in the palace.
+The Menagerie van Prince Willem V consists of five large-scale paintings by Dutch artist Aart Schouman (1710–1792) ([fig. 53.1](#fig-53-1)). Prince Willem V van Oranje-Nassau (1748–1806) commissioned the series for his private chambers in the Stadhouderlijk Kwartier, The Hague. The continuous landscapes depict Prince Willlem’s private collection of exotic animals. Transferred to Palace Huis ten Bosch at an unknown date, they languished rolled up and folded in the attic until their rediscovery in 1975.[^1] In the same year the paintings were restored by Nico van Bohemen Sr. and team, and then installed in the palace.
+
+{% figure 'fig-53-1' %}
 
 Unfortunately, little documentation of the 1975 treatment remains, but luckily one of the restorers, Nico van Bohemen Jr., could be interviewed as part of the current project and was happy to answer our questions.[^2] He had treated the paintings under the supervision of his father, Nico van Bohemen Sr., who was a successful self-taught restorer in The Hague. Van Bohemen Jr. recalled that the Schouman paintings were wax-resin lined using a mixture of raw yellow beeswax and powdered resin and were lined on a vacuum hot table face down on top of a sheet of Melinex.
 
@@ -65,7 +67,9 @@ A spun-yarn polyester fabric was considered a good lining fabric due to its avai
 
 ### Lining Table
 
-A stiff, solid support was desired during the lining process to assist in mitigating the planar distortions present in original support. As a conventional low-pressure table would have been too small, a makeshift, adaptive lining table was constructed ([**fig. 53.2**](fig-53-2)). The lining table described is an adaptation of the low-pressure envelope used in the mist-lining process. Vinyl flooring was laid on the wooden floor, creating a firm, smooth surface with sufficient cushioning for any painted impasto areas. This was covered with a thick plastic sheet (punctured with holes), which was pulled taut to extend beyond the vinyl and secured to the floor with tape to prevent movement. This plastic sheet creates the lower side of the lining table. A piece of open-weave cotton cheesecloth was placed over this plastic sheet to increase airflow within the lining envelope.
+A stiff, solid support was desired during the lining process to assist in mitigating the planar distortions present in original support. As a conventional low-pressure table would have been too small, a makeshift, adaptive lining table was constructed ([fig. 53.2](#fig-53-2)). The lining table described is an adaptation of the low-pressure envelope used in the mist-lining process. Vinyl flooring was laid on the wooden floor, creating a firm, smooth surface with sufficient cushioning for any painted impasto areas. This was covered with a thick plastic sheet (punctured with holes), which was pulled taut to extend beyond the vinyl and secured to the floor with tape to prevent movement. This plastic sheet creates the lower side of the lining table. A piece of open-weave cotton cheesecloth was placed over this plastic sheet to increase airflow within the lining envelope.
+
+{% figure 'fig-53-2' %}
 
 Lengths of plastic PVC tubing were connected together using 90-degree elbows to create a peripheral ring slightly smaller than the plastic sheeting described above. A T splitter was included on one side, which connected to a motor (a vacuum cleaner). Small holes were drilled into the inner side of the pipes to facilitate air extraction from within the lining envelope. The pipes were shrouded with an open-weave fabric (cheesecloth) to prevent the upper plastic from closing off these holes. The lining envelope is completed using a single piece of (green) lightweight, polyethylene foil, which is placed on top, sealing the system. A motor controlled with an inverter[^9] was used to draw air through the tubing, maintaining an even, low air pressure. The holes punched into the lower plastic sheet ensure that the upper, more flexible plastic foil conforms to the surface topography of the vinyl or the material within the envelope.
 
@@ -73,7 +77,11 @@ Lengths of plastic PVC tubing were connected together using 90-degree elbows to 
 
 To begin the relining, the green foil was rolled back; the painting was placed face down on the lining table; the stretcher, old lining fabric, and adhesive were removed; and holes and tears in the canvas were secured. The tears were mainly butt-joined using Beva 371 as the adhesive. Bridging glass-fiber strips were applied over the tear for additional support and adhered using Beva 371.
 
-Bands of glass-fiber interleaf were laid onto the painting’s reverse, slightly overlapping one another ([**fig. 53.3**](fig-53-3)). The lining fabric was then rolled out on top of the interleaf, and the green foil repositioned ([**fig. 53.4**](fig-53-4)).[^10] Before relining proceeded, a dry run ensured that the air would be evacuated quickly and evenly, and any irregularity in the structure was evaluated using raking light.
+Bands of glass-fiber interleaf were laid onto the painting’s reverse, slightly overlapping one another ([fig. 53.3](#fig-53-3)). The lining fabric was then rolled out on top of the interleaf, and the green foil repositioned ([fig. 53.4](#fig-53-4)).[^10] Before relining proceeded, a dry run ensured that the air would be evacuated quickly and evenly, and any irregularity in the structure was evaluated using raking light.
+
+{% figure 'fig-53-3' %}
+
+{% figure 'fig-53-4' %}
 
 The activation of the adhesive bonding the lining canvas to the interleaf and the interleaf to the original support was done in situ. The dry adhesive was reactivated using solvent vapors: xylene and ethanol (30:70). Cheesecloth was chosen as a carrier for the vapors due to its ability to absorb polar solvents easily. The solvent delivery cloth measured slightly larger than the surface area of the applied adhesive. The cloth was rolled into a tight bundle and wrapped with cling film (Saran wrap). A precalculated amount of solvent was then injected (75–80 ml per m^2^), and the roll was clamped for several hours to guarantee an even distribution of the solvents within the roll. At that point, the roll was unwrapped and placed quickly (to reduce evaporation loss) on top of the prepositioned, lining canvas. A string was attached to each corner of the solvent delivery cloth before it was folded, rolled, and wrapped to help speed distribution over the reverse.
 
