--- a/content/8-posters/55.md
+++ b/content/8-posters/55.md
@@ -21,15 +21,21 @@ abstract: "This paper describes the conservation treatment performed on a large-
 
 The painting entitled *The Crucifixion* originates from the neoclassical parish church of Saint Mary Magdalene in Serniki, a village in Eastern Poland. The church, designed by the architect Jakub Fontana, was funded by Eustachy Potocki (1720–1768), a Polish magnate ([[Gombin 2009]]\|, 123). Formerly a main altar painting*, The Crucifixion* was attributed by local tradition to Jan Bogumił Plersch (1732–1817), one of the most important Polish painters active during the rule of Stanisław August Poniatowski (1732–1798), the last king of Poland ([[Król-Kaczorowska 1981]]). The painting depicts Christ on the cross with figures surrounding him, and was modeled after the composition of *Coup de Lance*, which was painted in 1620 for the Convent of the Friars Minor in Antwerp by Peter Paul Rubens. Rubens’s composition was reproduced in a popular graphic print by Boetius à Bolswert. The print itself was not based on the painting but on a later drawing prepared in Rubens’s studio ([[Art Institute of Chicago n.d.]]).[^1] This print appears to have served as a direct inspiration for the author of the Serniki painting.
 
-*The Crucifixion* was painted with oil paint on a primed linen canvas that was sewn together from two main and four additional smaller pieces. It was once mounted on a traditional wooden stretcher, which no longer existed at the time of the conservation. Due to the painting’s rapidly declining condition, many damaging alterations, and extensive overpaintings done throughout its history ([**fig. 55.1**](fig-55-1)), the painting was removed from permanent display in the main altar during the second half of the twentieth century ([[Brykowski 1975\|, 239]]). It was then kept in a storage room, where it was subjected to further decay, waiting for a future conservation treatment.
+*The Crucifixion* was painted with oil paint on a primed linen canvas that was sewn together from two main and four additional smaller pieces. It was once mounted on a traditional wooden stretcher, which no longer existed at the time of the conservation. Due to the painting’s rapidly declining condition, many damaging alterations, and extensive overpaintings done throughout its history ([fig. 55.1](#fig-55-1)), the painting was removed from permanent display in the main altar during the second half of the twentieth century ([[Brykowski 1975\|, 239]]). It was then kept in a storage room, where it was subjected to further decay, waiting for a future conservation treatment.
+
+{% figure 'fig-55-1' %}
 
 As the project of conserving and restoring *The Crucifixion* exceeded the capabilities of a small parish, in 2014 the painting was handed over to the collection of the Museum of the John Paul II Catholic University of Lublin. It then became the subject matter of a joint master’s thesis executed at the Faculty of Conservation and Restoration of Works of Art at the Jan Matejko Academy of Fine Arts in Cracow from 2015 to 2017 ([[Dobrzańska and Lentowicz 2017]]).
 
 ## Condition and Treatment Goals
 
-The condition of the painting, which spent many years in the attic of a church, can be described as extremely poor ([**fig. 55.2**](fig-55-2)). Many unprofessional conservation attempts contributed to the dismal state of the artwork. The original support was lined to a linen canvas with a starch-based adhesive. The lining was almost completely detached from the painting. Underneath the lining, an attempt of strip lining was discovered; it had been done using a very coarse canvas and with a thick layer of rigid gluten glue and chalk gesso serving as an adhesive.
+The condition of the painting, which spent many years in the attic of a church, can be described as extremely poor ([fig. 55.2](#fig-55-2)). Many unprofessional conservation attempts contributed to the dismal state of the artwork. The original support was lined to a linen canvas with a starch-based adhesive. The lining was almost completely detached from the painting. Underneath the lining, an attempt of strip lining was discovered; it had been done using a very coarse canvas and with a thick layer of rigid gluten glue and chalk gesso serving as an adhesive.
 
-There were also numerous stratified fabric patches ([**fig. 55.3**](fig-55-3), top), attached with beeswax to the back of the original canvas, which was also almost entirely covered with a black impregnating substance (most probably various oil paints and bitumen) (see [**fig. 55.2**](fig-55-2)). In addition, the canvas support was torn in many places, and its parts were roughly sewn together with twine, pierced through the front of the painting and all its layers ([**fig. 55.3**](fig-55-3), bottom). The original paint and ground layers had poor adhesion to the canvas support, which resulted in many losses. The painting had been overpainted several times with thick layers of oil paint. The whole structure was rigid yet fragile, and seriously deformed.
+{% figure 'fig-55-2' %}
+
+There were also numerous stratified fabric patches ([fig. 55.3](#fig-55-3), top), attached with beeswax to the back of the original canvas, which was also almost entirely covered with a black impregnating substance (most probably various oil paints and bitumen) (see [fig. 55.2](#fig-55-2)). In addition, the canvas support was torn in many places, and its parts were roughly sewn together with twine, pierced through the front of the painting and all its layers ([fig. 55.3](#fig-55-3), bottom). The original paint and ground layers had poor adhesion to the canvas support, which resulted in many losses. The painting had been overpainted several times with thick layers of oil paint. The whole structure was rigid yet fragile, and seriously deformed.
+
+{% figure 'fig-55-3' %}
 
 The main goal of the conservation was to remove all harmful transformations. This was essential in order to recover the original painting. It should be noted that none of the alterations carried any historical or artistic value. The major overpainting was done around 1945–46. After that, due to the painting’s bad condition, it was displayed only occasionally. All of the other repairs could only be interpreted as rather makeshift attempts at stabilizing the painting’s structure, and they undoubtedly were not executed by a professional.
 
@@ -37,7 +43,7 @@ The main goal of the conservation was to remove all harmful transformations. Thi
 
 The treatment plan called for the removal of the old lining and patches, the cleaning of the back of the canvas, consolidation of the paint layer, flattening of deformations, removal of overpainting, and filling and reintegration of losses. Due to the condition of the painting and the severity of the damages, each step took several weeks or months to complete.
 
-The stage of addressing the consequences of the structural damage of the canvas support proved to be a particularly challenging part of the process, as the integrity of the material was almost completely lost. The most serious tear ran diagonally; it measured 2 meters in total and was amateurishly sewn together with twine ([**fig. 55.3**](fig-55-3), bottom). When the twine weakly holding the torn parts of the canvas was removed, it became clear that it was impossible to reassemble the pieces correctly without causing a great deformation. The diagonal tear reached about two-thirds the height of the whole painting, creating two almost separate “branches” of canvas, which became unevenly distorted after being subjected to changes in humidity: the gap between the parts reached 2.5 cm. However, the mutual edge of the torn parts was still identifiable.
+The stage of addressing the consequences of the structural damage of the canvas support proved to be a particularly challenging part of the process, as the integrity of the material was almost completely lost. The most serious tear ran diagonally; it measured 2 meters in total and was amateurishly sewn together with twine ([fig. 55.3](#fig-55-3), bottom). When the twine weakly holding the torn parts of the canvas was removed, it became clear that it was impossible to reassemble the pieces correctly without causing a great deformation. The diagonal tear reached about two-thirds the height of the whole painting, creating two almost separate “branches” of canvas, which became unevenly distorted after being subjected to changes in humidity: the gap between the parts reached 2.5 cm. However, the mutual edge of the torn parts was still identifiable.
 
 It would have been possible to maintain the existing arrangement by adhering the torn pieces together with the addition of the necessary inlay. However, the consequent distortion of the composition would have been so significant that this option was not pursued.
 
@@ -49,11 +55,15 @@ The next challenging step of the structural conservation of the canvas support w
 
 The whole structure was then transferred to a heated suction table, where the lining was performed in three stages. As the size of the object was much larger than the dimensions of the suction table, it was treated in three separate sections with the remaining length of the painting secured on a roller. A modified version of a vacuum envelope was used during this process. The painting was placed face down, as the original canvas support was sewn from parts with protruding stitches. In this way, the danger of deepening distortions trailing the course of stitches was minimized. The whole process in its essence did not differ from a standard lining procedure. However, the dimensions of the painting required that additional thought be put into the handling of the object. The stability of the painting was ensured by mounting it on a specially designed constant tension metal stretcher. The stretcher was designed and made by Henryk Arendarski, using a patented construction method.[^2]
 
-It was decided that the conservation of *The Crucifixion* should be finalized with a complete and reversible reconstruction of the composition executed on the basis of the graphic print by Boetius à Bolswert. Without retouching, the overwhelming number of losses made the composition almost illegible to a viewer (see [**fig. 55.4**](fig-55-4)). Although this process could not be described as one strictly following the rule of minimal intervention, we believe it was the only chance for *The Crucifixion* to regain its aesthetic value ([**fig. 55.5**](fig-55-5)). As the painting will become part of a museum collection, thorough information about the conservation process will be provided with its exhibition.
+It was decided that the conservation of *The Crucifixion* should be finalized with a complete and reversible reconstruction of the composition executed on the basis of the graphic print by Boetius à Bolswert. Without retouching, the overwhelming number of losses made the composition almost illegible to a viewer (see [fig. 55.4](#fig-55-4)). Although this process could not be described as one strictly following the rule of minimal intervention, we believe it was the only chance for *The Crucifixion* to regain its aesthetic value ([fig. 55.5](#fig-55-5)). As the painting will become part of a museum collection, thorough information about the conservation process will be provided with its exhibition.
+
+{% figure 'fig-55-4' %}
+
+{% figure 'fig-55-5' %}
 
 ## Verification of Authorship
 
-Research concerning the verification of the authorship was conducted simultaneously with the conservation process. Because of the poor condition of the original paint layer (see [**fig. 55.4**](fig-55-4)), it was almost impossible to perform a comparative, formal, or stylistic analysis with any other of Plersch’s paintings. No archival documents concerning the creation of the painting have survived, nor have any signatures or inscriptions been found. Extensive research and field studies were conducted, together with a comparative analysis of samples obtained from other paintings by Plersch done using scanning electron microscopy–energy dispersive X-ray (SEM-EDX). The chemical and physical examinations indicate that the ground composition in *The Crucifixion* is similar to another painting originating from the same church: *The Visitation of the Blessed Virgin Mary*, painted and signed by Plersch in 1760. Although the study remained inconclusive, it has allowed formation of a hypothesis for further investigation, which is being performed by Katarzyna Dobrzańska as a part of her postgraduate research at the Doctoral School of Jan Matejko Academy of Fine Arts in Cracow.
+Research concerning the verification of the authorship was conducted simultaneously with the conservation process. Because of the poor condition of the original paint layer (see [fig. 55.4](#fig-55-4)), it was almost impossible to perform a comparative, formal, or stylistic analysis with any other of Plersch’s paintings. No archival documents concerning the creation of the painting have survived, nor have any signatures or inscriptions been found. Extensive research and field studies were conducted, together with a comparative analysis of samples obtained from other paintings by Plersch done using scanning electron microscopy–energy dispersive X-ray (SEM-EDX). The chemical and physical examinations indicate that the ground composition in *The Crucifixion* is similar to another painting originating from the same church: *The Visitation of the Blessed Virgin Mary*, painted and signed by Plersch in 1760. Although the study remained inconclusive, it has allowed formation of a hypothesis for further investigation, which is being performed by Katarzyna Dobrzańska as a part of her postgraduate research at the Doctoral School of Jan Matejko Academy of Fine Arts in Cracow.
 
 ## Conclusion
 
