--- a/content/8-posters/57.md
+++ b/content/8-posters/57.md
@@ -36,7 +36,9 @@ The problem of restretching such pictures without giving preference to one “pr
 
 PVB has been widely used in conservation practice in Russia since the 1950s ([[Rumyantsev 1953]]), especially for treating murals, ceramics, and fabric painting supports. Its glass transition temperature is approximately 60℃–70℃. “PVB films are resistant to light and heat-sealable at temperatures above 120℃. . . . PVB films are noted for their biostable and abrasion resistance properties as well as for good colourfastness against ultra-violet light, low static generation, and low water absorption” ([[Sannikova 2018, 106]]).
 
-For the issue of two-sided paintings, conservators from GOSNIIR offered this technique to attach new canvas strips thread-by-thread to the original supports of the pictures ([[Yashkina and Churakova 2013]]). Polyvinyl butyral is a polymer with strong, elastic films and stable properties ([[Sannikova 2018]]), and when used for such type of strip-lining it makes it possible to stretch the painting on a special frame by applying gentle pressure. The joint can also be slightly reinforced by applying some linen fibers mixed with the adhesive or by stitching ([**fig. 57.1a, b**](fig-57-1)). This method can be especially useful for cases in which the paintings don’t have any original margins.
+For the issue of two-sided paintings, conservators from GOSNIIR offered this technique to attach new canvas strips thread-by-thread to the original supports of the pictures ([[Yashkina and Churakova 2013]]). Polyvinyl butyral is a polymer with strong, elastic films and stable properties ([[Sannikova 2018]]), and when used for such type of strip-lining it makes it possible to stretch the painting on a special frame by applying gentle pressure. The joint can also be slightly reinforced by applying some linen fibers mixed with the adhesive or by stitching ([fig. 57.1a, b](#fig-57-1)). This method can be especially useful for cases in which the paintings don’t have any original margins.
+
+{% figuregroup '2' 'fig-57-1-a, fig-57-1-b' %}
 
 ## Stretchers
 
@@ -44,13 +46,17 @@ According to modern conservation standards new stretchers must be extensible, an
 
 ### Case Study: Andrey Vasnetsov’s *New Village*
 
-*New Village* by Andrey Vasnetsov (1924–2009) had been kept unstretched in the storage of Abramtsevo museum-reserve for a few decades. Both sides of the canvas were painted with finished landscapes, oriented in different directions. One of the paintings is also approximately 10 cm larger than the other ([**fig. 57.2**](fig-57-2)). The painting was brought to our institution for research and restoration. Conservators consolidated the matte paint layer with copolymer of polyvinyl acetate with ethylene ([[Fedoseeva et al. 2016,\| 88]]). Then strip lining was performed. In this particular case we didn’t have to attach new linen margins thread-by-thread because one of the paintings was slightly smaller so there was enough space to do a traditional variant with an overlap. After these operations, the painting had to be stretched.
+*New Village* by Andrey Vasnetsov (1924–2009) had been kept unstretched in the storage of Abramtsevo museum-reserve for a few decades. Both sides of the canvas were painted with finished landscapes, oriented in different directions. One of the paintings is also approximately 10 cm larger than the other ([fig. 57.2](#fig-57-2)). The painting was brought to our institution for research and restoration. Conservators consolidated the matte paint layer with copolymer of polyvinyl acetate with ethylene ([[Fedoseeva et al. 2016,\| 88]]). Then strip lining was performed. In this particular case we didn’t have to attach new linen margins thread-by-thread because one of the paintings was slightly smaller so there was enough space to do a traditional variant with an overlap. After these operations, the painting had to be stretched.
 
-Conservator Artyom Romanov developed a system for doing so that was influenced by a constant tension system suggested by Barry B. Bauman of the Chicago Conservation Center. In 1982, Bauman designed a device for stretching and framing a double-sided painting that had an adjustable spring mechanism to ensure continuous canvas tension ([[Bauman 1982]]). In our case the museum and conservators decided to make the system manually controlled ([**fig. 57.3**](fig-57-3)). The stretcher for *New Village* consisted, in fact, of two frames. The inner, extensile one, to which the painting was attached, had furniture bushings around the perimeter on its side ends. The outer frame, with rigidly fixed edges, had tension screws that moved forward and backward toward the bushings and changed the tension by pulling and pushing the inner frame ([[Romanov 2013]]). Instead of springs and wall grips, the screws went directly into the furniture bushings. The number of tension screws may vary depending on the size of the picture and the condition of canvas. In this particular case, a linen sackcloth with a weaving density of about 8 x 8 threads per square centimeter was used as the painting support. For the smaller stretcher, Artyom Romanov installed bushing in threes on the long sides and in pairs for the shorter ones.
+{% figure 'fig-57-2' %}
 
-For display, the structural features of the stretchers should be hidden in order not to distract attention from the painting. Decorative elements on the two sides can be made in distinct styles to match a particular image. Moreover, if the images on the different sides of the painting are presented in different sizes or even formats, the outer frame can be designed to compensate for the difference, as in the case of the Vasnetsov picture ([**fig. 57.4**](fig-57-4)). The inner frame, which carried the original support, was created based on the measurements of the bigger painting, making it possible to cover the areas of blank canvas on the smaller side with decorative elements.
+Conservator Artyom Romanov developed a system for doing so that was influenced by a constant tension system suggested by Barry B. Bauman of the Chicago Conservation Center. In 1982, Bauman designed a device for stretching and framing a double-sided painting that had an adjustable spring mechanism to ensure continuous canvas tension ([[Bauman 1982]]). In our case the museum and conservators decided to make the system manually controlled ([fig. 57.3](#fig-57-3)). The stretcher for *New Village* consisted, in fact, of two frames. The inner, extensile one, to which the painting was attached, had furniture bushings around the perimeter on its side ends. The outer frame, with rigidly fixed edges, had tension screws that moved forward and backward toward the bushings and changed the tension by pulling and pushing the inner frame ([[Romanov 2013]]). Instead of springs and wall grips, the screws went directly into the furniture bushings. The number of tension screws may vary depending on the size of the picture and the condition of canvas. In this particular case, a linen sackcloth with a weaving density of about 8 x 8 threads per square centimeter was used as the painting support. For the smaller stretcher, Artyom Romanov installed bushing in threes on the long sides and in pairs for the shorter ones.
 
- 
+{% figure 'fig-57-3' %}
+
+For display, the structural features of the stretchers should be hidden in order not to distract attention from the painting. Decorative elements on the two sides can be made in distinct styles to match a particular image. Moreover, if the images on the different sides of the painting are presented in different sizes or even formats, the outer frame can be designed to compensate for the difference, as in the case of the Vasnetsov picture ([fig. 57.4](#fig-57-4)). The inner frame, which carried the original support, was created based on the measurements of the bigger painting, making it possible to cover the areas of blank canvas on the smaller side with decorative elements.
+
+{% figure 'fig-57-4' %}
 
 ### Case study: Diego Rivera’s *Glorious Victory*
 
