--- a/content/8-posters/58.md
+++ b/content/8-posters/58.md
@@ -19,9 +19,13 @@ The thread-by-thread method of repairing torn paintings, developed by the conser
 
 ## The Case
 
-The *Madonna and Child with the Young St. John the Baptist and Two Angels* (ca. 1650), attributed to the anonymous “Pittore di Pontignano” ([**fig. 58.1**](fig-58-1)), had suffered mechanical damage resulting in a tear some 104 centimeters long.
+The *Madonna and Child with the Young St. John the Baptist and Two Angels* (ca. 1650), attributed to the anonymous “Pittore di Pontignano” ([fig. 58.1](#fig-58-1)), had suffered mechanical damage resulting in a tear some 104 centimeters long.
 
-The painting is unlined and stretched on what appears to be its original strainer, with parts of its first stretching intact ([**fig. 58.2**](fig-58-2)). The strainer is constructed of a medium-density hardwood, perhaps walnut, with shouldered bridle joins at the corners, each secured with a single wooden peg.[^1] The medium-weight, plain-weave canvas had originally been attached with flat iron nails, driven partway into the strainer and bent down over the narrow tacking edges. Some of these edges had later been reinforced and secured with modern tacks, as well as with additional wooden strips on three sides. The tacking margins appeared secure and were lent support by the cushioned rabbet of the picture’s frame. The canvas itself was not under tension and had a slight overall undulation, rendered less noticeable by the marked texture of the paint film. The painting, apparently executed in oil, had been restored multiple times in the past, including fairly recently.
+{% figure 'fig-58-1' %}
+
+The painting is unlined and stretched on what appears to be its original strainer, with parts of its first stretching intact ([fig. 58.2](#fig-58-2)). The strainer is constructed of a medium-density hardwood, perhaps walnut, with shouldered bridle joins at the corners, each secured with a single wooden peg.[^1] The medium-weight, plain-weave canvas had originally been attached with flat iron nails, driven partway into the strainer and bent down over the narrow tacking edges. Some of these edges had later been reinforced and secured with modern tacks, as well as with additional wooden strips on three sides. The tacking margins appeared secure and were lent support by the cushioned rabbet of the picture’s frame. The canvas itself was not under tension and had a slight overall undulation, rendered less noticeable by the marked texture of the paint film. The painting, apparently executed in oil, had been restored multiple times in the past, including fairly recently.
+
+{% figure 'fig-58-2' %}
 
 My suggestion that local tear repair could mend the damage while avoiding lining—and so maintain the valued “object nature” of the artwork—met with a positive response from the owners. Old canvas repairs, notably two patches on the reverse, were not addressed.
 
@@ -29,9 +33,13 @@ My suggestion that local tear repair could mend the damage while avoiding lining
 
 Loose paint along the tear was first secured with 5% sturgeon glue.
 
-The tear was then repaired using the thread-by-thread method ([**fig. 58.3**](fig-58-3)). Working under a binocular microscope, broken threads were realigned and rejoined using a 1:1 mixture of 20% sturgeon glue and 10% wheat starch paste. I used a Weller WD1M soldering station with a micro soldering iron to cure the adhesive mixture. This tool has the benefit of digital temperature control, and exchangeable tips in various precise shapes are available.[^2]
+The tear was then repaired using the thread-by-thread method ([fig. 58.3](#fig-58-3)). Working under a binocular microscope, broken threads were realigned and rejoined using a 1:1 mixture of 20% sturgeon glue and 10% wheat starch paste. I used a Weller WD1M soldering station with a micro soldering iron to cure the adhesive mixture. This tool has the benefit of digital temperature control, and exchangeable tips in various precise shapes are available.[^2]
 
-Because the overlap of the torn fibers was not great in some areas—many canvas threads were essentially butt-joined—the tear was reinforced. Using the same glue-paste adhesive, linen threads were attached to the canvas reverse to bridge the tear ([**fig. 58.4**](fig-58-4)). The spacing of the bridging threads was guided organically by the overlap, and hence stability, of the repaired original fibers. Their length was varied from 0.5 to 2 cm to broaden the area of reinforcement, avoid creating a single line of tension, and attenuate the added material. The introduction of a second adhesive system to attach the bridging threads was considered: polyvinyl acetate emulsions, Beva 371, Paraloid B72 resin, and polyamide welding powder were all potential candidates and might have introduced greater resistance to moisture; however, the easy reversibility of the sturgeon-glue mixture proved more alluring to this conservator.
+{% figure 'fig-58-3' %}
+
+Because the overlap of the torn fibers was not great in some areas—many canvas threads were essentially butt-joined—the tear was reinforced. Using the same glue-paste adhesive, linen threads were attached to the canvas reverse to bridge the tear ([fig. 58.4](#fig-58-4)). The spacing of the bridging threads was guided organically by the overlap, and hence stability, of the repaired original fibers. Their length was varied from 0.5 to 2 cm to broaden the area of reinforcement, avoid creating a single line of tension, and attenuate the added material. The introduction of a second adhesive system to attach the bridging threads was considered: polyvinyl acetate emulsions, Beva 371, Paraloid B72 resin, and polyamide welding powder were all potential candidates and might have introduced greater resistance to moisture; however, the easy reversibility of the sturgeon-glue mixture proved more alluring to this conservator.
+
+{% figure 'fig-58-4' %}
 
 After securing the tear, humidification of the canvas with drying under weight was performed to reduce deformations. Because the canvas is not under tension, the possibility exists that, although the canvas matrix now appears quite cohesive, future tenting of the support at the tear could occur. It is hoped that the secondary supporting measures discussed below will mitigate this. Additional steps to keep the tear flat, such as the attachment of bridging wires or pins, remain a future treatment option should this prove necessary.
 
@@ -43,7 +51,9 @@ The canvas support had discolored to a ruddy brown and was traced with a dark ne
 
 Although the tear was closed and appeared secure after several weeks of observation, the entire object remained fragile. To lend additional support and stability to the canvas, a type of insert lining was constructed.
 
-For this, a basswood frame was built with an L-shaped profile that could rest within an inner lip of the primary strainer; as on a modern stretcher, the edges of the new frame facing the canvas were slightly beveled. Unbleached cotton muslin was then stretched over this frame, secured at its outer edges with staples. The insert lining was fixed to the inner edges of the strainer using six screws, with the stretched muslin placed just behind and barely touching the canvas. An acid-free backing board was attached to the wooden frame of the insert ([**fig. 58.5**](fig-58-5)). The construction is designed to support the canvas and cushion its movement, provide an environmental buffer for the canvas reverse, and protect from further mechanical damage. It is easily reversible, leaving only the small holes from the attaching screws. The construction is similar to the so-called vibration protectors (*Schwingungsschutze*) I observed while an intern at the Kunsthistorisches Museum in Vienna.
+For this, a basswood frame was built with an L-shaped profile that could rest within an inner lip of the primary strainer; as on a modern stretcher, the edges of the new frame facing the canvas were slightly beveled. Unbleached cotton muslin was then stretched over this frame, secured at its outer edges with staples. The insert lining was fixed to the inner edges of the strainer using six screws, with the stretched muslin placed just behind and barely touching the canvas. An acid-free backing board was attached to the wooden frame of the insert ([fig. 58.5](#fig-58-5)). The construction is designed to support the canvas and cushion its movement, provide an environmental buffer for the canvas reverse, and protect from further mechanical damage. It is easily reversible, leaving only the small holes from the attaching screws. The construction is similar to the so-called vibration protectors (*Schwingungsschutze*) I observed while an intern at the Kunsthistorisches Museum in Vienna.
+
+{% figure 'fig-58-5' %}
 
 ## Filling, Retouching, and Varnish
 
@@ -73,4 +83,4 @@ Talas, New York: Evolon CR, Heritage Archival Corrugated Board.
 
 [^1]: Wood identification was not performed.
 
-[^2]: Newer models of this tool are available, for instance the Weller WX series workstations with a Pico soldering iron WXPP; see [https://weller-tools.com](about:blank).
+[^2]: Newer models of this tool are available, for instance the Weller WX series workstations with a Pico soldering iron WXPP; see [https://weller-tools.com](https://weller-tools.com).
