--- a/content/8-posters/41.md
+++ b/content/8-posters/41.md
@@ -28,7 +28,11 @@ Founded in 1934 with the hire of Sheldon Keck as restorer, the BkM Conservation 
 
 Documentation has been integral to conservation practice at BkM since the beginning. Although reports have become more nuanced over time, many early records were abbreviated, rarely elaborating on the treatment rationale or describing the materials and techniques in a way that would allow the processes to be reproduced. Often reports were unsigned, recipe components were not itemized or quantified, and procedures were summarized using undefined terms (such as “the Dutch method” for lining preparations). With a few notable exceptions, this lack of detail presents challenges in understanding the relationship between current condition issues and previous treatments.
 
-Archival research has provided valuable insights into BkM treatment methods absent in the documentation. In 1954 and 1962, Sheldon and Caroline produced two films for a general audience, both of which illustrate the complex operation of performing a wax-resin lining. The earlier film features a lining executed with a hand iron ([**fig. 41.1**](fig-41-1)) ([[Keck and Keck 1954]]), and in the later one, conservators demonstrate the use of a vacuum hot table ([**fig. 41.2**](fig-41-2)) ([[Keck and Keck 1962]]). In both films, the narration illuminates the reasoning behind each action and material selected. The filmed processes are remarkably consistent with physical evidence of lining observed on many paintings in the collection, such as paper residues on the tacking margins or brush marks and fingerprints on the versos of paintings lined by hand.
+Archival research has provided valuable insights into BkM treatment methods absent in the documentation. In 1954 and 1962, Sheldon and Caroline produced two films for a general audience, both of which illustrate the complex operation of performing a wax-resin lining. The earlier film features a lining executed with a hand iron ([fig. 41.1](#fig-41-1)) ([[Keck and Keck 1954]]), and in the later one, conservators demonstrate the use of a vacuum hot table ([fig. 41.2](#fig-41-2)) ([[Keck and Keck 1962]]). In both films, the narration illuminates the reasoning behind each action and material selected. The filmed processes are remarkably consistent with physical evidence of lining observed on many paintings in the collection, such as paper residues on the tacking margins or brush marks and fingerprints on the versos of paintings lined by hand.
+
+{% figure 'fig-41-1' %}
+
+{% figure 'fig-41-2' %}
 
 ## Methodology
 
@@ -38,15 +42,21 @@ BkM conservation records are kept as paper files and digital assets on The Museu
 
 Wax-resin linings were performed at BkM over a nearly fifty-year period from 1936 through the mid-1980s, encompassing the rise and fall of the technique’s popularity in the United States. Based on the records reviewed to date, the authors hypothesize that 20%–25% of the canvas paintings in the BkM collection are wax-resin lined. The earliest linings were primarily done on paintings that had been in the collection for decades. The institution, with roots dating back to 1823, had been collecting paintings for nearly a hundred years before employing a conservator. In his first years on the job, Keck may have encountered a backlog of paintings in unstable condition that he judged to be in need of lining. The data appears to suggest that, starting in the 1940s, many paintings were lined as they were acquired. This trend is consistent with the developing role of the conservator within the museum. Annual reports from 1938 onward emphasize the practice of examining all artwork considered for acquisition “to make sure of their good condition and authenticity” ([[Brooklyn Museum 1940\|, 23]]).
 
-Most of the paintings wax-resin lined at BkM were between fifty and 125 years old at the time of lining ([**fig. 41.3**](fig-41-3)), including paintings from the early nineteenth century through the 1930s. Few paintings predating the nineteenth century were lined at BkM, which likely reflects the strength of BkM collection holdings in certain areas.
+Most of the paintings wax-resin lined at BkM were between fifty and 125 years old at the time of lining ([fig. 41.3](#fig-41-3)), including paintings from the early nineteenth century through the 1930s. Few paintings predating the nineteenth century were lined at BkM, which likely reflects the strength of BkM collection holdings in certain areas.
 
-Fluctuations in the number of linings performed each year may correspond with significant events ([**fig. 41.4**](fig-41-4)). Keck performed the first wax-resin lining on record at BkM in 1936, two years after he was hired.[^1] This initial delay may relate to setting up a new laboratory rather than a concerted effort on his part. In 1943, Keck left to serve in World War II as one of the Monuments Men in the U.S. Army’s Monuments, Fine Arts, and Archives Program ([[Monuments Men Foundation n.d.]]). Few paintings were lined until Caroline assumed his museum duties and resumed the practice.
+{% figure 'fig-41-3' %}
+
+Fluctuations in the number of linings performed each year may correspond with significant events ([fig. 41.4](#fig-41-4)). Keck performed the first wax-resin lining on record at BkM in 1936, two years after he was hired.[^1] This initial delay may relate to setting up a new laboratory rather than a concerted effort on his part. In 1943, Keck left to serve in World War II as one of the Monuments Men in the U.S. Army’s Monuments, Fine Arts, and Archives Program ([[Monuments Men Foundation n.d.]]). Few paintings were lined until Caroline assumed his museum duties and resumed the practice.
+
+{% figure 'fig-41-4' %}
 
 Some variations in lining frequency may be linked to new technology, such as the vacuum hot table acquired in 1961, and/or staffing changes that occurred in the department over the decades. The apparent increase in numbers observed in the late 1970s and early 1980s warrants further investigation, considering the critical attitudes against lining that developed in the field of conservation at this time.
 
 The most common motivations given for lining include a “cupped” or “cracked” paint film; a “dry,” “brittle,” or “slack” canvas; and the failure of an old glue-paste lining. Significantly, not all paintings called to the laboratory were lined as a matter of course; many underwent less invasive treatments or were left untouched. This was sometimes attributed to lack of time, but also occurred if it was determined that no intervention was required, particularly in cases where a stable lining was already present.
 
-There were significant periods when adhesive components were not listed each time a lining was performed ([**fig. 41.5**](fig-41-5)). The earliest reports, dated 1936–1940, reliably include the same formula of 60 parts beeswax, 35 parts dammar resin, and 5 parts Canada balsam. In 1941, the terms *wax-resin* or *wax* were used alone, without specifying components. Reports from 1942–1944 contain a similar recipe to the earlier one, with slightly different proportions: 65 parts beeswax, 30 parts dammar resin, and 5 parts Canada balsam. The term *wax-resin* predominates again from 1945 to 1946, and from 1961 onward. These trends indicate that generic language was common once the same formula had been used for a while, with little variation.
+There were significant periods when adhesive components were not listed each time a lining was performed ([fig. 41.5](#fig-41-5)). The earliest reports, dated 1936–1940, reliably include the same formula of 60 parts beeswax, 35 parts dammar resin, and 5 parts Canada balsam. In 1941, the terms *wax-resin* or *wax* were used alone, without specifying components. Reports from 1942–1944 contain a similar recipe to the earlier one, with slightly different proportions: 65 parts beeswax, 30 parts dammar resin, and 5 parts Canada balsam. The term *wax-resin* predominates again from 1945 to 1946, and from 1961 onward. These trends indicate that generic language was common once the same formula had been used for a while, with little variation.
+
+{% figure 'fig-41-5' %}
 
 Starting in 1949, Multiwax W-835 was added to some wax-resin mixtures, marking the beginning of an experimental period with different materials, which included microcrystalline wax, gum elemi, and turpentine. On occasion, current or former trainees lined paintings at BkM using distinctive recipes. In the early 1950s, Louis Pomerantz treated at least one painting as a student volunteer using 6 parts beeswax, 6 parts Multiwax W-835, 6 parts dammar resin, and 1 part Canada balsam.[^2] In 1971–72, BkM contracted Bernard Rabin, who used an adhesive made from 3 pounds unbleached beeswax, 5.5 pounds Multiwax W-445, 1 1/2 pounds Piccolyte S-85, and 2 pounds dammar resin.[^3] References to “Bernard Rabin’s wax-resin mixture” appear in later reports, suggesting his 1971–72 formula was reused.[^4]
 
