--- a/content/8-posters/43.md
+++ b/content/8-posters/43.md
@@ -15,9 +15,15 @@ abstract: "During treatment of Francesco Bassano’s *Adoration of the Shepherds
 
 ## Introduction
 
-In the fall of 2018, the Arkansas Arts Center’s *Adoration of the Shepherds,* attributed to Francesco Bassano ([**fig. 43.1**](fig-43-1)), was brought to New York University’s Conservation Center for treatment. The painting is part of the dispersed Kress Collection, and had not been studied since 1932, when it was restored by then-conservator of the Kress Collection, Stephen Pichetto.[^1] During treatment at the Conservation Center, it was revealed the painting had been lined with a very open-weave canvas ([**fig. 43.2**](fig-43-2)). This was an unusual discovery, as canvas paintings treated by the Kress Foundation during this period were often lined after acquisition with tightly woven canvases.[^2] Additionally, there were no notes in the Kress Foundation Archive that discussed the addition of a lining. So where was it applied?
+In the fall of 2018, the Arkansas Arts Center’s *Adoration of the Shepherds,* attributed to Francesco Bassano ([fig. 43.1](#fig-43-1)), was brought to New York University’s Conservation Center for treatment. The painting is part of the dispersed Kress Collection, and had not been studied since 1932, when it was restored by then-conservator of the Kress Collection, Stephen Pichetto.[^1] During treatment at the Conservation Center, it was revealed the painting had been lined with a very open-weave canvas ([fig. 43.2](#fig-43-2)). This was an unusual discovery, as canvas paintings treated by the Kress Foundation during this period were often lined after acquisition with tightly woven canvases.[^2] Additionally, there were no notes in the Kress Foundation Archive that discussed the addition of a lining. So where was it applied?
 
-The lining has several characteristics that point to an Italian method of canvas lining. Although the original canvas has a fine weave, approximately 30 x 30 threads per inch, the lining has a very open, plain weave with approximately 16 x 16 threads per inch. The canvas is composed of threads with irregular widths, and the lining overall was adhered with a thin layer of glue-paste adhesive ([**fig. 43.3**](fig-43-3)). Clues from the painting’s provenance were quite limited, leading back only to the dealer who sold it to the Kress Foundation in 1930; this was Florentine dealer Count Alessandro Contini-Bonacossi, who supplied many paintings to Samuel H. Kress ([[Shapley 1973]]). It is therefore likely the lining was applied in Italy before the painting was sold, though it is unknown where it might have been done, or by whom.
+{% figure 'fig-43-1' %}
+
+{% figure 'fig-43-2' %}
+
+The lining has several characteristics that point to an Italian method of canvas lining. Although the original canvas has a fine weave, approximately 30 x 30 threads per inch, the lining has a very open, plain weave with approximately 16 x 16 threads per inch. The canvas is composed of threads with irregular widths, and the lining overall was adhered with a thin layer of glue-paste adhesive ([fig. 43.3](#fig-43-3)). Clues from the painting’s provenance were quite limited, leading back only to the dealer who sold it to the Kress Foundation in 1930; this was Florentine dealer Count Alessandro Contini-Bonacossi, who supplied many paintings to Samuel H. Kress ([[Shapley 1973]]). It is therefore likely the lining was applied in Italy before the painting was sold, though it is unknown where it might have been done, or by whom.
+
+{% figure 'fig-43-3' %}
 
 ## Roman versus Florentine Lining Canvases
 
