--- a/content/8-posters/44.md
+++ b/content/8-posters/44.md
@@ -41,17 +41,29 @@ Certain tasks precede the lining itself.
 
 Lining is a six-step process.
 
-1.  Prepare the stretcher by adhering Beva 371 film cut to the depth of the stretcher. There should be adhesive around the perimeter of the stretcher ([**fig. 44.1**](fig-44-1)).
+1.  Prepare the stretcher by adhering Beva 371 film cut to the depth of the stretcher. There should be adhesive around the perimeter of the stretcher ([fig. 44.1](#fig-44-1)).
 
-2.  The lined painting is placed face down on a flat surface. The lining canvas is precreased at the fold-over edge ([**fig. 44.2**](fig-44-2)) to both help guide the conservator in the placement of the stretcher and to avoid the effect commonly known as TV screening (named for televisions’ original old slightly rounded cathode-ray tube displays). The stretcher is put in place and adjusted as needed to accommodate the size of the painting.
+{% figure 'fig-44-1' %}
 
-3.  The tacking margins of the lining canvas are secured to the stretcher with pushpins on the back of the stretcher ([**fig. 44.3**](fig-44-3)). There should be no excessive pulling or tensioning of the lining fabric; the goal is to simply hold the canvas in place.
+2.  The lined painting is placed face down on a flat surface. The lining canvas is precreased at the fold-over edge ([fig. 44.2](#fig-44-2)) to both help guide the conservator in the placement of the stretcher and to avoid the effect commonly known as TV screening (named for televisions’ original old slightly rounded cathode-ray tube displays). The stretcher is put in place and adjusted as needed to accommodate the size of the painting.
 
-4.  Using a tacking iron, heat the tacking margins of the lining to activate the Beva 371 film and secure the painting to the stretcher ([**fig. 44.4**](fig-44-4)). The fabric is pulled taut with hand strength, working around the four sides, making sure that the lining fabric has properly adhered to the stretcher.
+{% figure 'fig-44-2' %}
 
-5.  At this point the stretcher can be gently expanded to properly tension the painting. The original tacking margins of the painting will stick out ([**fig. 44.5**](fig-44-5)).
+3.  The tacking margins of the lining canvas are secured to the stretcher with pushpins on the back of the stretcher ([fig. 44.3](#fig-44-3)). There should be no excessive pulling or tensioning of the lining fabric; the goal is to simply hold the canvas in place.
 
-6.  The original tacking margins can now be folded down and secured with the preferred method, for example, tacks or staples ([**fig. 44.6**](fig-44-6)).
+{% figure 'fig-44-3' %}
+
+4.  Using a tacking iron, heat the tacking margins of the lining to activate the Beva 371 film and secure the painting to the stretcher ([fig. 44.4](#fig-44-4)). The fabric is pulled taut with hand strength, working around the four sides, making sure that the lining fabric has properly adhered to the stretcher.
+
+{% figure 'fig-44-4' %}
+
+5.  At this point the stretcher can be gently expanded to properly tension the painting. The original tacking margins of the painting will stick out ([fig. 44.5](#fig-44-5)).
+
+{% figure 'fig-44-5' %}
+
+6.  The original tacking margins can now be folded down and secured with the preferred method, for example, tacks or staples ([fig. 44.6](#fig-44-6)).
+
+{% figure 'fig-44-6' %}
 
 ## Advantages of the System
 
