--- a/content/8-posters/45.md
+++ b/content/8-posters/45.md
@@ -21,9 +21,15 @@ This research examined the impact of wax-resin linings on the color of ground la
 
 ## Hypothesis
 
-Material evidence found in four paintings by Jacob Jordaens (1593–1678) in the Royal Palace Amsterdam provided the basis for the research hypothesis ([**fig. 45.1**](fig-45-1)).[^1]
+Material evidence found in four paintings by Jacob Jordaens (1593–1678) in the Royal Palace Amsterdam provided the basis for the research hypothesis ([fig. 45.1](#fig-45-1)).[^1]
 
-Technical examination revealed that though the paintings were in different states of condition, they had aged in identical environments and received similar restoration treatments, including wax-resin linings in 1963 ([[van Eikema Hommes and Froment 2011]]). Differing degrees of darkness were particularly striking ([**figs. 45.2**](fig-45-2), [**45.3**](fig-45-3)).
+{% figure 'fig-45-1' %}
+
+Technical examination revealed that though the paintings were in different states of condition, they had aged in identical environments and received similar restoration treatments, including wax-resin linings in 1963 ([[van Eikema Hommes and Froment 2011]]). Differing degrees of darkness were particularly striking ([figs. 45.2](#fig-45-2)), ([45.3](#fig-45-3)).
+
+{% figure 'fig-45-2' %}
+
+{% figure 'fig-45-3' %}
 
 Analysis of paint cross sections from each of the paintings highlighted the use of different ground types that varied in both the number of layers and material composition as well as the type of binding medium. The correlation between material evidence and documentary sources that report color change in paintings after wax-resin lining supported the hypothesis that the visual consequence of wax-resin linings in seventeenth-century Netherlandish paintings is related to the original preparation technique.
 
@@ -71,9 +77,15 @@ For the oil-bound grounds, those composed of either ball clay or chalk measured 
 
 In general, color measurements showed that glue-bound grounds changed more significantly than oil-bound, thus highlighting the influence of binding medium. It was assumed that voids inherently present in glue-bound grounds filled with wax resin, resulting in modification of refractive index and surface texture, thus causing color change. In contrast with the behavior of glue-bound grounds, the impregnation of wax-resin adhesive into the oil-bound grounds was never observed during the wax-resin treatment. For these reconstructions, color change was believed to be caused by the degree of hiding power of the ground. This assumption was supported by the pilot study, which showed that grounds containing either chalk or ball clay had poor hiding power.
 
-After impregnation, the glue-bound ground composed of chalk and the oil-bound grounds composed of chalk, lead white, and ball clay developed a typical “abraded look” ([**figs. 45.4**](fig-45-4) and [**45.5**](fig-45-5)).
+After impregnation, the glue-bound ground composed of chalk and the oil-bound grounds composed of chalk, lead white, and ball clay developed a typical “abraded look” ([figs. 45.4](#fig-45-4)) and ([45.5](#fig-45-5)).
 
-Color measurements of these grounds reported significant differences in hiding power as a result of layer thickness. As thickness varies considerably due to the inherent irregular texture of canvas supports, the color change of these grounds was more significant on the highest points of the canvas weave, resulting in local darkening ([**fig. 45.6**](fig-45-6)).
+{% figure 'fig-45-4' %}
+
+{% figure 'fig-45-5' %}
+
+Color measurements of these grounds reported significant differences in hiding power as a result of layer thickness. As thickness varies considerably due to the inherent irregular texture of canvas supports, the color change of these grounds was more significant on the highest points of the canvas weave, resulting in local darkening ([fig. 45.6](#fig-45-6)).
+
+{% figure 'fig-45-6' %}
 
 Also key is the tonal value of the grounds that contrasted significantly with the darkened support.
 
@@ -91,9 +103,13 @@ By correlating experimental results from the reconstructions with results of the
 
 After 1642, canvas paintings by Rembrandt are frequently primed with a quartz containing ground. Results of technical analysis revealed that this ground consists mainly of clay minerals, with a high proportion of quartz sand in linseed oil ([[Groen 2005]]). Research suggests that the composition of quartz ground varies among paintings, with the variables including the type of clay minerals and the proportion of trace elements such as chalk, iron oxide, and carbon black. An experiment in this study examined the influence of the clay-to-quartz ratio, as well as the effect of adding of yellow iron oxide on the extent of color change.
 
-Each quartz-containing oil-bound ground showed substantial color change following impregnation ([**fig. 45.7**](fig-45-7)). The change was among the most significant of all oil-bound grounds tested, with differences ranging from 4.23 to 6.80 ∆E\* units. Trends indicated that the higher the ratio of quartz to clay, the greater the change. Although the inclusion of 3% yellow iron oxide tended to reduce this effect, color change remained significant. Finally, each of the quartz-containing grounds tested changed color to a similar extent regardless of thickness.
+Each quartz-containing oil-bound ground showed substantial color change following impregnation ([fig. 45.7](#fig-45-7)). The change was among the most significant of all oil-bound grounds tested, with differences ranging from 4.23 to 6.80 ∆E\* units. Trends indicated that the higher the ratio of quartz to clay, the greater the change. Although the inclusion of 3% yellow iron oxide tended to reduce this effect, color change remained significant. Finally, each of the quartz-containing grounds tested changed color to a similar extent regardless of thickness.
 
-This series of grounds proved to have the poorest hiding power of all grounds tested ([**fig. 45.8**](fig-45-8)). This condition was most pronounced in samples where the ground was applied thickly, while most other grounds examined in this study were opaque under those conditions. Furthermore, the pilot study indicated that the higher the concentration of quartz, the poorer the hiding power, supporting the influence of hiding power on the color change of the reconstructions.
+{% figure 'fig-45-7' %}
+
+This series of grounds proved to have the poorest hiding power of all grounds tested ([fig. 45.8](#fig-45-8)). This condition was most pronounced in samples where the ground was applied thickly, while most other grounds examined in this study were opaque under those conditions. Furthermore, the pilot study indicated that the higher the concentration of quartz, the poorer the hiding power, supporting the influence of hiding power on the color change of the reconstructions.
+
+{% figure 'fig-45-8' %}
 
 ## Conclusion
 
