--- a/content/8-posters/46.md
+++ b/content/8-posters/46.md
@@ -18,7 +18,17 @@ abstract: "Textiles with a woven pattern were used as painters’ canvases by Sp
 
 Textiles with a woven pattern were used as painters’ canvases by Spanish and Italian artists in the sixteenth and seventeenth centuries. But art historians and painting conservators have focused on the painted layers rather than the underlying fabric.
 
-In this poster, textiles that have been hidden for centuries between paint and lining canvas come to life in handwoven reconstructions of the support canvas of five paintings by El Greco ([**fig. 46.1**](fig-46-1)), Titian ([**fig. 46.2**](fig-46-2)), Caravaggio ([**fig. 46.3**](fig-46-3)), and Velázquez (**[figs. 46.4](fig-46-4), [46.5](fig-46-5)**). The support canvas used by the great masters is shown in each of the figures.
+In this poster, textiles that have been hidden for centuries between paint and lining canvas come to life in handwoven reconstructions of the support canvas of five paintings by El Greco ([fig. 46.1](#fig-46-1-a)), Titian ([fig. 46.2](#fig-46-2-a)), Caravaggio ([fig. 46.3](#fig-46-3-a)), and Velázquez ([fig. 46.4](#fig-46-4-a)), ([fig. 46.5](#fig-46-5-a)). The support canvas used by the great masters is shown in each of the figures.
+
+{% figuregroup '2' 'fig-46-1-a, fig-46-1-b, fig-46-1-c, fig-46-1-d' %}
+
+{% figuregroup '2' 'fig-46-2-a, fig-46-2-b, fig-46-2-c, fig-46-2-d' %}
+
+{% figuregroup '2' 'fig-46-3-a, fig-46-3-b, fig-46-3-c, fig-46-3-d' %}
+
+{% figuregroup '2' 'fig-46-4-a, fig-46-4-b, fig-46-4-c, fig-46-4-d' %}
+
+{% figuregroup '2' 'fig-46-5-a, fig-46-5-b, fig-46-5-c, fig-46-5-d' %}
 
 ## Material and Methods
 
