--- a/content/8-posters/47.md
+++ b/content/8-posters/47.md
@@ -27,11 +27,21 @@ The sensitivity of approach demonstrated by these two important figures for nume
 
 My experience in the field of structural conservation of canvas paintings has allowed me to test and use a system[^2] to mitigate the problem of variation in tension of canvases undergoing restoration, with significant results. This innovation aims to maintain the painting under a constant tension during all of the phases of treatment and to transfer the degree of tension that is initially established for the temporary stretcher to the definitive one, thereby avoiding the potentially damaging “accordion” effect.
 
-The system is extremely versatile in that it is applicable to paintings undergoing either only consolidation or a full lining, and hinges on the use of specially designed perimeter strips. Each strip is composed of two polyester canvas layers: the first, a lightweight polyester that comes in contact with the original painting (Origam 254, 18 g/m^2^), and the second, a heavier polyester (Trevira C.S. Ispra, 130 g/m^2^). Each is frayed[^3] for about 10 mm along the longer edge. The individual strips, thus prepared, are then paired in a staggered manner, longitudinally, with Beva film between them. They are then inserted in a vacuum envelope, and the adhesive is reactivated by heating it to 80°C, a measure aimed at ensuring a particularly solid bond[^4] ([**fig. 47.1**](fig-47-1)).
+The system is extremely versatile in that it is applicable to paintings undergoing either only consolidation or a full lining, and hinges on the use of specially designed perimeter strips. Each strip is composed of two polyester canvas layers: the first, a lightweight polyester that comes in contact with the original painting (Origam 254, 18 g/m^2^), and the second, a heavier polyester (Trevira C.S. Ispra, 130 g/m^2^). Each is frayed[^3] for about 10 mm along the longer edge. The individual strips, thus prepared, are then paired in a staggered manner, longitudinally, with Beva film between them. They are then inserted in a vacuum envelope, and the adhesive is reactivated by heating it to 80°C, a measure aimed at ensuring a particularly solid bond[^4] ([fig. 47.1](#fig-47-1)).
+
+{% figure 'fig-47-1' %}
 
 Once the painting is detached from the original stretcher, and after the back has been cleaned, it is possible to apply these double strips to the back of the original canvas (inside the fold-over marks from the original stretcher at a distance suited to the specific painting) with pressure (best if generated with vacuum suction, for a better and more even bond) and heat, but only up to the minimal temperature for Beva reactivation (65°C), to provide for better reversibility. This means the double strip adheres to the original canvas less aggressively, while the bond between the two strips is stronger.
 
-Afterward, the original canvas is stretched on the temporary stretcher using the plane of the table to provide support for the canvas as the double-layer perimeter strips are secured to the temporary stretcher ([**fig. 47.2**](fig-47-2)). After structural conservation treatment, the temporary stretcher and canvas are again laid face down on a flat surface. The definitive stretcher is then positioned on the back, within the width of the temporary stretcher, aligned with the fold-over marks on the original canvas. The first of the two layers of the added tacking margin (the heavier, outside one) is cut free from the temporary stretcher and fixed to the definitive one with steel staples, thus not allowing the canvas to contract (**[figs. 47.3](fig-47-3), [47.4](fig-47-4)**). Only after having secured the entire perimeter is the second layer of the strip cut free from the working stretcher and fixed to the definitive one ([**fig. 47.5**](fig-47-5)).
+Afterward, the original canvas is stretched on the temporary stretcher using the plane of the table to provide support for the canvas as the double-layer perimeter strips are secured to the temporary stretcher ([fig. 47.2](#fig-47-2)). After structural conservation treatment, the temporary stretcher and canvas are again laid face down on a flat surface. The definitive stretcher is then positioned on the back, within the width of the temporary stretcher, aligned with the fold-over marks on the original canvas. The first of the two layers of the added tacking margin (the heavier, outside one) is cut free from the temporary stretcher and fixed to the definitive one with steel staples, thus not allowing the canvas to contract ([fig. 47.3](#fig-47-3)), ([fig. 47.4](#fig-47-4)). Only after having secured the entire perimeter is the second layer of the strip cut free from the working stretcher and fixed to the definitive one ([fig. 47.5](#fig-47-5)).
+
+{% figure 'fig-47-2' %}
+
+{% figure 'fig-47-3' %}
+
+{% figure 'fig-47-4' %}
+
+{% figure 'fig-47-5' %}
 
 This sequence avoids variations in tension as, during the shift to the final stretcher, a bond is always maintained with the temporary stretcher. The initial tension is constant and can be transferred to the definitive stretcher.
 
