--- a/content/8-posters/48.md
+++ b/content/8-posters/48.md
@@ -61,13 +61,21 @@ The second method employs heat to accelerate the absorption process. This option
 
 In Russia, a large number of paintings that have previously been treated with beeswax currently require conservation. One of these works was the *Portrait of F. N. Sinyavina* painted by the great Russian artist Fyodor Rokotov (1735/1736–1808) in the State Historical Museum.
 
-The canvas of the painting had a big tear that had been fixed with beeswax (**figs. [48.1](fig-48-1), [48.2](fig-48-2))**, and losses of ground and paint layer had been filled with beeswax and then overpainted in oil (see [**fig. 48.1**](fig-48-1)). Over time, the wax had lost its adhesive strength, which resulted in the detachment of the tear edges and the formation of the strains in the canvas near the tear. The original paint layer was covered with surface dirt, overpaint, wax drops, and uneven and darkened varnish. The painting was stretched on a stretcher of a smaller size than it originally had, with the paint layer wrapped over the sides.
+The canvas of the painting had a big tear that had been fixed with beeswax ([fig. 48.1](#fig-48-1), [fig. 48.2](#fig-48-2)), and losses of ground and paint layer had been filled with beeswax and then overpainted in oil (see [[fig. 48.1](#fig-48-1)). Over time, the wax had lost its adhesive strength, which resulted in the detachment of the tear edges and the formation of the strains in the canvas near the tear. The original paint layer was covered with surface dirt, overpaint, wax drops, and uneven and darkened varnish. The painting was stretched on a stretcher of a smaller size than it originally had, with the paint layer wrapped over the sides.
+
+{% figure 'fig-48-1' %}
+
+{% figure 'fig-48-2' %}
 
 As already mentioned, wax treatment limits the use of restoration materials other than synthetic or natural wax. To avoid repeated restoration of the painting using wax-based compositions, the beeswax needed to be removed from the canvas structure, and the AEROSIL-based paste was applied for this purpose.
 
-Removal of beeswax from the canvas was done using the first method described in the Procedure Outline section above. (It is worthwhile to note that during wax absorption the change in the paste color was not observed.) After the mineral spirit evaporated, the surface layer of the paste with absorbed beeswax was removed with a scalpel ([**fig. 48.3**](fig-48-3)), followed by the use of a bristle brush and vacuum cleaner for more complete cleaning.
+Removal of beeswax from the canvas was done using the first method described in the Procedure Outline section above. (It is worthwhile to note that during wax absorption the change in the paste color was not observed.) After the mineral spirit evaporated, the surface layer of the paste with absorbed beeswax was removed with a scalpel ([fig. 48.3](#fig-48-3)), followed by the use of a bristle brush and vacuum cleaner for more complete cleaning.
 
-This procedure allowed 5% sturgeon glue to be used to consolidate the paint layer and ground. The tear was then mended thread-by-thread with a 5% solution of polyvinyl butyral (PVB) in isopropanol (with a high degree of purity) ([**fig. 48.4a, b**](fig-48-4)). On the reverse, the tear area was reinforced with additional threads taken from canvas edges to make the tear area more secure during stretching on a new stretcher.
+{% figure 'fig-48-3' %}
+
+This procedure allowed 5% sturgeon glue to be used to consolidate the paint layer and ground. The tear was then mended thread-by-thread with a 5% solution of polyvinyl butyral (PVB) in isopropanol (with a high degree of purity) ([fig. 48.4a, b](#fig-48-4)). On the reverse, the tear area was reinforced with additional threads taken from canvas edges to make the tear area more secure during stretching on a new stretcher.
+
+{% figuregroup '2' 'fig-48-4-a, fig-48-4-b' %}
 
 After the elimination of canvas deformations, losses to the ground were filled. Surface cleaning was done using a solution of one part of purified ox bile and four parts distilled water. After applying the mixture, the treated area was rinsed with distilled water. A mixture of ethanol and pinene (1:2), was used to thin the darkened varnish.
 
